Added belt promotion and black belt test schedules

--- a/serverless-project/package.json
+++ b/serverless-project/package.json
@@ -2,7 +2,7 @@
   "name": "serverless-project-karate-scheduler",
   "version": "1.0.0",
   "description": "",
-  "main": "handler.js",
+  "main": "index.js",
   "dependencies": {
     "ask-sdk": "^2.3.0"
   },
