--- a/serverless-project/serverless.yml
+++ b/serverless-project/serverless.yml
@@ -56,8 +56,8 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  handler:
-    handler: handler.handler
+  karate-scheduler:
+    handler: index.handler
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
